<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scissor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
     <string name="action_share">Share</string>
    <string name="title_activity_product_rating_view">Product Rating View</string>
    <string name="title_activity_user_profile_view">User Profile</string>
    <string name="title_activity_password_change_view">Change Password</string>
    <string name="logo"></string>
    <string name="user"></string>
    <string name="setting_image"></string>
    <string name="NormalUser">User</string>
    <string name="BrandView">Select Brand to Search</string>
    <string name="ProductView">Select Product to Search</string>
    <string name="HistoryView">Previous History</string>
    <string name="FoodManufacturer">Manufacturer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_home_page">Home Page</string>

    <string-array name="setting_items">
        <item>Home</item>
        <item>Profile</item>
        <item>Settings</item>
        <item>Journal</item>
        <item>Logout</item>
    </string-array>
    <string-array name="score_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="title_activity_fmregistration">FM Registration</string>
    <string name="title_activity_fmhome_page">FM Home Page</string>
    <string name="title_activity_product_view">Product Detail View</string>

</resources>
