<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/logo"
        android:src="@drawable/login_logo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/user"
            android:src="@drawable/user" />

        <EditText
            android:id="@+id/idTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit"
            android:ems="10"
            android:hint="User Name"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/setting_image"
            android:src="@drawable/settings" />

        <EditText
            android:id="@+id/preferredIDTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edit"
            android:ems="10"
            android:hint="Pass****"
            android:paddingLeft="5dp"
            android:inputType="textPassword"
            android:singleLine="true" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/loginButton"
        style="@style/btnStyleGenoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Create an account"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
			android:layout_height="wrap_content"
            android:gravity="bottom"
            android:weightSum="2"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="15dp"
             >

            <Button
                android:id="@+id/registerNormalUserButton"
                style="@style/btnStyleGenoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/NormalUser"
                />

            <Button
                android:id="@+id/registerFoodManufacturerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/FoodManufacturer" 
                android:layout_marginLeft="10dp"
                style="@style/btnStyleGenoa"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>